Apply compiler conventions to test fixtures